--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '11' # Sonar Scanner requiere Java.
-          distribution: 'adoptopenjdk' # Se especifica la distribución de Java (puedes usar 'adoptopenjdk' o 'zulu')
+          distribution: 'adoptium'
 
       # 4. Instalar dependencias del proyecto
       - name: Install dependencies
