--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -23,22 +23,15 @@ jobs:
         with:
           node-version: 18 # Asegura que se use la versión adecuada de Node.js.
 
-      # 3. Configurar Java
-      - name: Setup Java
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11' # Sonar Scanner requiere Java.
-          distribution: 'zulu'
-
-      # 4. Instalar dependencias del proyecto
+      # 3. Instalar dependencias del proyecto
       - name: Install dependencies
         run: npm install
 
-      # 5. Generar reporte de cobertura con Jest
+      # 4. Generar reporte de cobertura con Jest
       - name: Run Jest with coverage
         run: npx jest --coverage # Genera el archivo coverage/lcov.info.
 
-      # 6. Instalar sonar-scanner (si no usas la acción oficial de SonarCloud)
+      # 5. Instalar sonar-scanner (si no usas la acción oficial de SonarCloud)
       - name: Install SonarScanner
         run: |
           sudo apt-get install -y unzip
@@ -47,16 +40,17 @@ jobs:
           sudo mv sonar-scanner-4.6.2.2472-linux /opt/sonar-scanner
           sudo ln -s /opt/sonar-scanner/bin/sonar-scanner /usr/bin/sonar-scanner
 
-      # 7. Ejecutar Sonar Scanner
-      - name: Run Sonar Scanner
+      # 6. Ejecutar Sonar Scanner
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
         env:
-          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }} # Asegúrate de configurar este secreto en GitHub.
-        run: |
-          sonar-scanner \
-            -Dsonar.projectKey=cantor11_skyshield-test \
-            -Dsonar.organization=cantor11 \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.sources=./src \
-            -Dsonar.language=js \
-            -Dsonar.exclusions=node_modules/** \
+          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=cantor11_skyshield-test
+            -Dsonar.organization=cantor11
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.sources=./src
+            -Dsonar.language=js
+            -Dsonar.exclusions=node_modules/**
             -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
