--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 # Información del proyecto
 sonar.projectKey=cantor11_skyshield-test
 sonar.organization=cantor11
-sonar.host.url=https://sonarcloud.io
-sonar.token=89443def71ee8246c1512d708efa75ddb07a0603
+#sonar.host.url=https://sonarcloud.io
+#sonar.token=89443def71ee8246c1512d708efa75ddb07a0603
 
 sonar.exclusions=node_modules/**
 
