--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -49,9 +49,4 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
           SONAR_HOST_URL: ${{ vars.SONARCLOUD_HOST_URL }}
         with:
-          args: >
-            -Dsonar.projectKey=cantor11_skyshield-test
-            -Dsonar.organization=cantor11
-            -Dsonar.language=js
-            -Dsonar.sources=./src
-            -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
+          projectBaseDir: .
